# mandelbrot-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: ematrix.rs  frontend.rs  lib.rs  loc.rs  main.rs  polycomplex.rs  rctx.rs  render_context.rs
