[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Adrien Thebo <adrien@lagrange-automation.io>"]
edition = "2018"

[dependencies]
termion = "1.5"
num = { version = "0.2", features = ["serde"] }
itertools = "0.7.8"
rayon = "1.1"
nalgebra = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
